# Lab05

./: CMakeLists.txt  REPORT.md  calc.cpp  calc.h
.github/workflows/: cicd.yml
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
_build/examples/hello_world/: Makefile  cmake_install.cmake  hello_world
_build/examples/solver/: Makefile  cmake_install.cmake  solver_app
_build/formatter_ex_lib/: Makefile  cmake_install.cmake
_build/formatter_lib/: Makefile  cmake_install.cmake
_build/solver_lib/: Makefile  cmake_install.cmake
connect/: CMakeLists.txt  connect.cpp  connect.h
connect/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
examples/hello_world/: CMakeLists.txt  hello_world.cpp
examples/hello_world/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
examples/solver/: CMakeLists.txt  solver.cpp
examples/solver/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_ex_lib/include/: formatter_ex.h
formatter_ex_lib/sources/: formatter_ex.cpp
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_lib/include/: formatter.h
formatter_lib/sources/: formatter.cpp
solver_lib/: CMakeLists.txt
solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_lib/include/: solver.h
solver_lib/sources/: solver.cpp
test1/: CMakeLists.txt  calc.h
test_connect/: CMakeLists.txt  GMOCK.cpp
tests/: CMakeLists.txt  GTEST.cpp
